--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cryptography==38.0.0
 snowflake-connector-python==2.0.3
 boto3==1.9.33
 inflection==0.3.1
+jsonschema==2.6.0
 joblib==0.16.0
 importlib-resources==5.10.2
-importlib-metadata==4.2.0
+importlib-metadata==3.4.0
